--- a/react/package.json
+++ b/react/package.json
@@ -17,8 +17,8 @@
     "e2e": "protractor",
     "e2e-live": "protractor --elementExplorer"
   },
-  "repository": "https://github.com/SafecoinPlatform/FairExchange-GUI",
-  "homepage": "http://ipv6admin.com",
+  "repository": "https://github.com/OleksandrBlack/FairExchange-GUI",
+  "homepage": "",
   "keywords": [
     "safewallet",
     "FairExchange",
